--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -20,8 +20,8 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/Nanxy-Tran/random_reviewer/releases/latest
           )
-          latest_release=${{ fromJson(latest_release) }}
-          echo "::set-output name=latest_release::${latest_release.tag_name}"
+          version=${{ fromJson(latest_release).tag_name }}
+          echo "::set-output name=latest_release::${version}"
 
       - name: Patch hotfix to production 🔥
         env:
