--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -20,12 +20,12 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/Nanxy-Tran/random_reviewer/releases/latest
           )
-          version=${{ fromJson(latest_release).tag_name }}
-          echo "::set-output name=latest_release::${version}"
+
+          echo "::set-output name=latest_release::${latest_release}"
 
       - name: Patch hotfix to production 🔥
         env:
-          LATEST_VERSION: ${{ steps.fetch_latest_release.outputs.latest_release }}
+          LATEST_VERSION: ${{ toJson(steps.fetch_latest_release.outputs.latest_release).tag_name }}
         run: |
           echo ${LATEST_VERSION:1}
 
