--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -27,6 +27,7 @@ jobs:
         env:
           LATEST_VERSION: ${{ toJson(steps.fetch_latest_release.outputs.latest_release).tag_name }}
         run: |
+          echo $LATEST_VERSION
           echo ${LATEST_VERSION:1}
 
 
