--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -20,11 +20,13 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/Nanxy-Tran/random-reviewer/releases/latest
           )
-          echo $latest_release | jq '.tag_name'
-          echo "::set-output name=latest_release::${latest_release}"
+          version=$latest_release | jq '.tag_name'
+          echo "::set-output name=latest_release::${version:1}"
 
       - name: Patch hotfix to production 🔥
+        env:
+          LATEST_VERSION: ${steps.fetch_latest_release.outputs.latest_release}
         run: |
-          echo $latest_release | jq '.tag_name'
+          echo $LATEST_VERSION
 
 
