--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Patch hotfix to production 🔥
         env:
-          LATEST_VERSION: ${steps.fetch_latest_release.outputs.latest_release}
+          LATEST_VERSION: ${{ steps.fetch_latest_release.outputs.latest_release }}
         run: |
           echo $LATEST_VERSION
 
