--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -18,10 +18,11 @@ jobs:
         run: |
           latest_release=$(curl \
             -H "Accept: application/vnd.github.v3+json" \
-             https://api.github.com/repos/Nanxy-Tran/random-reviewer/releases/latest
+             https://api.github.com/repos/Nanxy-Tran/random-reviewer/releases/latest |
+              jq '.tag_name'
           )
-          version=$(latest_release | jq '.tag_name')
-          echo "::set-output name=latest_release::${version:1}"
+          echo $latest_release
+          echo "::set-output name=latest_release::${latest_release}"
 
       - name: Patch hotfix to production 🔥
         env:
