--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -19,10 +19,10 @@ jobs:
           latest_release=$(curl \
             -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/Nanxy-Tran/random-reviewer/releases/latest |
-              jq '.tag_name'
+             jq '.tag_name'
           )
           echo $latest_release
-          echo "::set-output name=latest_release::${latest_release}"
+          echo "::set-output name=latest_release::${latest_release:1}"
 
       - name: Patch hotfix to production 🔥
         env:
