--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -1,33 +1,42 @@
-name: Patch hotfix to production
+name: Release PR
 on:
   pull_request:
     types:
       - opened
-      - synchronize
+    branches:
+      - v1
 
 jobs:
-  patch-hotfix:
+  create-release:
+    if: contains(github.head_ref, 'release/v') && ${{ github.event.action === 'closed' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: '14'
-
-      - id: fetch_latest_release
-        run: |
-          latest_release=$(curl \
-            -H "Accept: application/vnd.github.v3+json" \
-             https://api.github.com/repos/Nanxy-Tran/random-reviewer/releases/latest |
-             jq '.tag_name' | cut -d'"' -f 2
-          )
-          echo $latest_release
-          echo "::set-output name=latest_release::${latest_release:1}"
-
-      - name: Patch hotfix to production 🔥
+          node-version: 14
+      - uses: actions/github-script@v5
         env:
-          LATEST_VERSION: ${{steps.fetch_latest_release.outputs.latest_release}}
-        run: |
-          echo $LATEST_VERSION
+          BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
+        with:
+          script: |
+            const { BRANCH_NAME } = process.env;
+            const { owner, repo } = context.repo;
+            const tag_name = BRANCH_NAME.replace('release/v', '')
+
+            console.log(repo)
+            console.log(github.event.pull_request)
+
+#            const milestone = github.rest.issues.getMilestone({
+#              owner,
+#              repo,
+#              milestone_number: tag_name,
+#            });
+
+#            const release = github.rest.repos.createRelease({
+#              owner,
+#              repo,
+#              tag_name: ,
+#            });
 
 
