--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -78,9 +78,9 @@ jobs:
               const webhook = new IncomingWebhook(web_hook_url);
 
               webhook.send({
-                text: `Thank everyone for your contribution to our latest release 🎉
-                       The next release is <a href=${nextMilestone.url}>${nextMilestone.title}</a>
-                       Remember to link your PRs to this milestone so you won’t miss the release :wink:`
+                text: `Thank everyone for your contribution to our latest release 🎉🎉🎉
+                The next release <${nextMilestone.url}| *is* ${nextMilestone.title}>
+                Remember to link your PRs to this milestone so you won’t miss the release :wink:`
               })      
             }
 
