--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -76,9 +76,10 @@ jobs:
             if (nextMilestone) {
               const web_hook_url = process.env.SLACK_URL;
               const webhook = new IncomingWebhook(web_hook_url);
+              console.log(nextMilestone)
 
               webhook.send({
-                text: `Thank everyone for your contribution to our latest release 🎉🎉🎉 \n The next release <${nextMilestone[0].url}| *is* ${nextMilestone[0].title}> \n Remember to link your PRs to this milestone so you won’t miss the release :wink:`
+                text: `Thank everyone for your contribution to our latest release 🎉🎉🎉 \n The next release <${nextMilestone.url}| *is* ${nextMilestone.title}> \n Remember to link your PRs to this milestone so you won’t miss the release :wink:`
               })      
             }
 
