--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -149,7 +149,7 @@ jobs:
               const web_hook_url = process.env.SLACK_URL;
               const web_hook_config = {
                 username: 'GitHub Release bot',
-                icon_url: 'https://octodex.github.com/images/repo.png'
+                icon_url: 'https://octodex.github.com/images/nyantocat.gif'
               };
               const webhook = new IncomingWebhook(web_hook_url, web_hook_config);
               const { html_url, title } = nextMilestone.data;
