--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,16 +4,13 @@ on:
     types:
       - opened
       - closed
-      - synchronize
     branches:
       - v1
 
 jobs:
   update-release-content:
-    if: contains(github.head_ref, 'release/v')
+    if: ${{ contains(github.head_ref, 'release/v') && github.event.action == 'opened' }}
     runs-on: ubuntu-latest
-    env:
-      BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -22,11 +19,12 @@ jobs:
       - run: npm install lodash.groupby
       - name: Update content of release 📖
         uses: actions/github-script@v5
+        env:
+          BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
         with:
           script: |
             const groupBy = require('lodash.groupby');
-            const { BRANCH_NAME } = process.env;
-            const version = BRANCH_NAME.replace('release/', '');
+            const version = process.env.BRANCH_NAME.replace('release/', '');
             const params = [
               'repo:' + context.repo.owner + '/' + context.repo.repo,
               'type:pr',
@@ -55,8 +53,6 @@ jobs:
               return description + prContent
             }, header);
 
-            console.log(body);
-
             github.rest.pulls.update({
               body,
               pull_number: context.issue.number,
@@ -65,7 +61,7 @@ jobs:
             });
 
   create-release:
-    if: ${{ contains(github.head_ref, 'release/v') && github.event.action == 'synchronize' }}
+    if: ${{ contains(github.head_ref, 'release/v') && github.event.action == 'closed' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -78,34 +74,31 @@ jobs:
           BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
         with:
           script: |
-            const { BRANCH_NAME } = process.env;
             const { owner, repo } = context.repo;
-            const tag_name = BRANCH_NAME.replace('release/', '')
-
-            const allMilestone = await github.rest.issues.listMilestones({
+            const allMilestones = await github.rest.issues.listMilestones({
               owner,
               repo
             });
 
-            const currentMilestone = allMilestone.data.find(milestone => milestone.title === tag_name);
+            const tagName = process.env.BRANCH_NAME.replace('release/', '')
+            const currentMilestone = allMilestones.data.find(milestone => milestone.title === tagName);
 
             if (!currentMilestone) return;
 
-            const release_due_on = currentMilestone.due_on;
-            const releaseDate = new Date(release_due_on);
-            const tag_time = `${releaseDate.getFullYear()}-${releaseDate.getMonth() + 1}-${releaseDate.getDate()}`;
+            const releaseDate = new Date(currentMilestone.due_on);
+            const tagTime = `${releaseDate.getFullYear()}-${releaseDate.getMonth() + 1}-${releaseDate.getDate()}`;
 
             const release = await github.rest.repos.createRelease({
               owner,
               repo,
-              tag_name,
-              name: `${tag_name.replace('v','')} [${tag_time}]`,
+              tag_name: tagName,
+              name: `${tagName.replace('v','')} [${tagTime}]`,
               draft: true,
               generate_release_notes: true
             });
 
   create-milestone:
-    if: ${{ contains(github.head_ref, 'release/v') && github.event.action == 'synchronize' }}
+    if: ${{ contains(github.head_ref, 'release/v') && github.event.action == 'closed' }}
     runs-on: ubuntu-latest
     needs: create-release
     steps:
@@ -121,21 +114,19 @@ jobs:
           BRANCH_NAME: ${{ github.head_ref }}
         with:
           script: |
-            const BRANCH_NAME = process.env.BRANCH_NAME;
-            const { IncomingWebhook } = require('@slack/webhook');
             const { owner, repo } = context.repo;
-            const tag_name = BRANCH_NAME.replace('release/', '')
-            const date = new Date();
-
             const allMilestones = await github.rest.issues.listMilestones({
               owner,
               repo
             })
 
-            const currentMilestone = allMilestones.data.find(milestone => milestone.title === tag_name);
+            const tagName = process.env.BRANCH_NAME.replace('release/', '')
+            const currentMilestone = allMilestones.data.find(milestone => milestone.title === tagName);
 
-            date.setUTCDate(date.getUTCDate() + (8 - date.getUTCDay()));
-            date.setHours(12)
+            const numberDayOfWeekCycle = 8;
+            const nextDueDate = new Date();
+            nextDueDate.setUTCDate(nextDueDate.getUTCDate() + (numberDayOfWeekCycle - nextDueDate.getUTCDay()));
+            nextDueDate.setHours(12)
 
             const [majorVersion, minorVersion, patchVersion] = currentMilestone.title.split('.');
             const nextPatch = Number(patchVersion) + 1;
@@ -145,18 +136,19 @@ jobs:
               owner,
               repo,
               title: nextVersion,
-              due_on: date.toISOString()
+              due_on: nextDueDate.toISOString()
             })
 
             if (nextMilestone) {
-              const webHookUrl = process.env.SLACK_URL;
-                            const webHookConfig = {
-                              username: 'GitHub Release bot',
-                              icon_url: 'https://octodex.github.com/images/bouncercat.png'
-                            };
-
-              const webhook = new IncomingWebhook(webHookUrl, webHookConfig);
               const { html_url, title } = nextMilestone.data;
+
+              const slackConfig = {
+                username: 'GitHub release bot',
+                icon_url: 'https://octodex.github.com/images/bouncercat.png'
+              };
+
+              const { IncomingWebhook } = require('@slack/webhook');
+              const webhook = new IncomingWebhook(process.env.SLACK_URL, slackConfig);
 
               webhook.send({
                 text: `Thank everyone for your contribution to our latest release 🎉🎉🎉 \n The next release is <${html_url}|${title}> \n Remember to link your PRs to this milestone so you won’t miss the release :wink:`
