--- a/.github/workflows/clean_deployments.yml
+++ b/.github/workflows/clean_deployments.yml
@@ -9,6 +9,7 @@ jobs:
   update-release-content:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: 14
