--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         with:
           script: |
-            const lastestMessage = $COMMIT_MESSAGE
+            const lastestMessage = process.env.COMMIT_MESSAGE
 
             const sleep = async (duration) => {
               await new Promise((resolve) => {
