--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         with:
           script: |
+
             const lastestMessage = process.env.COMMIT_MESSAGE
 
             const sleep = async (duration) => {
@@ -35,7 +36,9 @@ jobs:
               });
             };
 
-            await sleep(10000);
+            console.log(github.event)
+
+            await sleep(20000);
 
             if (lastestMessage) {
               const slackConfig = {
