--- a/.github/workflows/notify_failed_workflow.yml
+++ b/.github/workflows/notify_failed_workflow.yml
@@ -1,7 +1,7 @@
 name: Notify failed workflows
 on:
   workflow_run:
-    workflows: [deploy]
+    workflows: [Deploy CodePush]
     types: [completed]
 jobs:
     on-failure:
