small change 4 can cel 3

--- a/.github/workflows/notify_failed_workflow.yml
+++ b/.github/workflows/notify_failed_workflow.yml
@@ -1,8 +1,10 @@
 name: Notify failed workflows
 on:
   workflow_run:
-    workflows: [Deploy CodePush]
-    types: [completed]
+    workflows:
+      - Deploy CodePush
+    types:
+      - completed
 
 jobs:
     on-failure:
