--- a/.github/workflows/notify_failed_workflow.yml
+++ b/.github/workflows/notify_failed_workflow.yml
@@ -9,6 +9,7 @@ on:
 jobs:
     on-failure:
       runs-on: ubuntu-latest
+      if: ${{ github.event.workflow_run.conclusion == 'cancelled' && github.actor == 'bot' }}
       steps:
         - uses: actions/checkout@v2
         - uses: actions/setup-node@v2
@@ -21,10 +22,11 @@ jobs:
             SLACK_URL: ${{ secrets.SLACK_HOOK }}
             BRANCH_NAME: ${{ github.event.action }}
             COMMIT_MESSAGE: ${{ github.event.workflow_run.conclusion }}
+            ACTOR : ${{ github.actor }}
           with:
             script: |
 
-              const lastestMessage = process.env.COMMIT_MESSAGE
+              const lastestMessage = process.env.ACTOR
               console.log(lastestMessage)
 
               const sleep = async (duration) => {
@@ -46,44 +48,3 @@ jobs:
                   text: `Deployed failed the commit: ${JSON.stringify(lastestMessage)}`
                 })
               }
-
-    on-success:
-      runs-on: ubuntu-latest
-      if: ${{ github.event.workflow_run.conclusion == 'success' }}
-      steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-node@v2
-          with:
-            node-version: 16
-        - run: npm install @slack/webhook
-        - name: Create next milestone
-          uses: actions/github-script@v6
-          env:
-            SLACK_URL: ${{ secrets.SLACK_HOOK }}
-            BRANCH_NAME: ${{ github.event.action }}
-            COMMIT_MESSAGE: ${{ github.event.workflow.url }}
-          with:
-            script: |
-
-              const lastestMessage = process.env.COMMIT_MESSAGE
-
-              const sleep = async (duration) => {
-                await new Promise((resolve) => {
-                  setTimeout(resolve, duration);
-                });
-              };
-
-              await sleep(20000);
-
-              if (lastestMessage) {
-                const slackConfig = {
-                  username: 'GitHub Milestone',
-                  icon_url: 'https://octodex.github.com/images/bouncercat.png'
-                };
-                const { IncomingWebhook } = require('@slack/webhook');
-                const webhook = new IncomingWebhook(process.env.SLACK_URL, slackConfig);
-                webhook.send({
-                  text: `Deployed successfully the commit: ${JSON.stringify(lastestMessage)}`
-                })
-              }
-
