--- a/.github/workflows/notify_failed_workflow.yml
+++ b/.github/workflows/notify_failed_workflow.yml
@@ -9,7 +9,7 @@ on:
 jobs:
     on-failure:
       runs-on: ubuntu-latest
-      if: ${{ github.event.workflow_run.conclusion == 'cancelled' && github.actor == 'bot' }}
+      if: ${{ github.event.workflow_run.conclusion == 'cancelled' }}
       steps:
         - uses: actions/checkout@v2
         - uses: actions/setup-node@v2
